Update background image path for welcome board

--- a/style.css
+++ b/style.css
@@ -805,7 +805,7 @@ button:hover {
     font-weight: 500;
 }
 
-background-image: url("correct/path/to/image.png");
+background-image: url("images/screen1.png");
 #welcomeBoard {
     width: 100%;
     aspect-ratio: 1;
