--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ button:hover {
   justify-content: center;
   align-items: center;
   padding: 4px;
+  /* border: 1px solid; */
 }
 .pot {
   width: calc(var(--box) / 3);
