--- a/style.css
+++ b/style.css
@@ -801,6 +801,7 @@ button:hover {
     font-weight: 500;
 }
 
+background-image: url("correct/path/to/image.png");
 #welcomeBoard {
     width: 100%;
     aspect-ratio: 1;
